welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:3: error: not found: value nbCaseorange
while (2*nbBiscuit < nbCaseorange+1){
                     ^